--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World! 
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Sudeshna Maitra</title>
+	</head>
+	<body>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hello World!</h1>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+	</body>
+</html>
