--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<body>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hello World!</h1>
+        		<h1>Sudeshna Maitra</h1>
+			<p>Hello World!</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 	</body>
