--- a/index.html
+++ b/index.html
@@ -1,63 +1,56 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<title>Sudeshna Maitra</title>
-	</head>
-	<body>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Sudeshna Maitra</h1>
-			<p>Sudeshna Maitra
-PhD, Princeton University
+<head>
+	<title>Sudeshna Maitra</title>
+</head>
+<body>
+<h1>Sudeshna Maitra</h1>
 
-Assistant Professor
-Department of Economics
-York University
-4700 Keele St, Toronto ON M3J 1P3, Canada
+<p>PhD, Princeton University</p>
 
-RESEARCH INTERESTS
-development, health, gender,  
-the economic processes at work behind observed 
-data
+<p>Assistant Professor<br />
+Department of Economics<br />
+York University<br />
+4700 Keele St, Toronto ON M3J 1P3, Canada</p>
 
-CONTACT INFORMATION
+<p>RESEARCH INTERESTS<br />
+development, health, gender<br />
+the economic processes at work behind observed data</p>
 
+<p>CONTACT INFORMATION</p>
 
-RESEARCH
+<p><br />
+RESEARCH</p>
 
-On the Theory and Measurement of Poverty using Durable Ownership Data.
-Working Paper, September 2019.
+<p>On the Theory and Measurement of Poverty using Durable Ownership Data.<br />
+Working Paper, September 2019.</p>
 
-Population dynamics and marriage payments: an analysis of the long run equilibrium in India.
-The B.E. Journal of Macroeconomics, 18(2), June 2018.
+<p>Population dynamics and marriage payments: an analysis of the long run equilibrium in India.<br />
+The B.E. Journal of Macroeconomics, 18(2), June 2018.</p>
 
-Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model.
-Applied Economics Letters, 24(17), 1203-1207, October 2017.
+<p>Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model.<br />
+Applied Economics Letters, 24(17), 1203-1207, October 2017.</p>
 
-The poor get poorer: Tracking relative poverty in India using a durables-based mixture model.
-Journal of Development Economics, 119, 110-120, 2016.
+<p>The poor get poorer: Tracking relative poverty in India using a durables-based mixture model.<br />
+Journal of Development Economics, 119, 110-120, 2016.</p>
 
+<p><br />
+Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership.<br />
+Working Paper, May 2011.</p>
 
-Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership.
-Working Paper, May 2011.
+<p>Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited.<br />
+Social Science and Medicine, 70(6), 802-812, March 2010.</p>
 
-Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited.
-Social Science and Medicine, 70(6), 802-812, March 2010.
+<p>Does Parental Education Protect Child Health? Some Evidence from Rural Udaipur.<br />
+in Econophysics and Economics of Games, Social Choices and Quantitative Techniques, edited by Banasri Basu, Bikas K. Chakrabarti, Satya R. Chakravarty and Kausik Gangopadhyay, Springer, 2009.</p>
 
-Does Parental Education Protect Child Health? Some Evidence from Rural Udaipur.
-in Econophysics and Economics of Games, Social Choices and Quantitative Techniques, edited by Banasri Basu, Bikas K. Chakrabarti, Satya R. Chakravarty and Kausik Gangopadhyay, Springer, 2009.
+<p>Is Socioeconomic Status Protective of Health? Some Evidence from Rural Udaipur.<br />
+in Poverty, Health and Development, edited by Sujit K. Paul, Commonwealth Publishers, New Delhi, 2008.</p>
 
-Is Socioeconomic Status Protective of Health? Some Evidence from Rural Udaipur.
-in Poverty, Health and Development, edited by Sujit K. Paul, Commonwealth Publishers, New Delhi, 2008.
+<p>Dowry and Bride Price.<br />
+in International Encyclopedia of the Social Sciences, 2nd Edition, Gale Thompson, 2007.</p>
 
-Dowry and Bride Price.
-in International Encyclopedia of the Social Sciences, 2nd Edition, Gale Thompson, 2007.
-
-Population growth and marriage payments: the short run mechanism of a marriage squeeze.
-Working paper, 2006.
-</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-	</body>
+<p>Population growth and marriage payments: the short run mechanism of a marriage squeeze.<br />
+Working paper, 2006.</p>
+</body>
 </html>
