--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Sudeshna Maitra</title>
+	<title>HTML Editor - Full Version</title>
 </head>
 <body>
 <h1>Sudeshna Maitra</h1>
@@ -14,8 +14,8 @@ York University<br />
 4700 Keele St, Toronto ON M3J 1P3, Canada</p>
 
 <p>RESEARCH INTERESTS<br />
-development, health, gender<br />
-the economic processes at work behind observed data</p>
+development, health, gender,&nbsp;&nbsp;<br />
+the economic processes at work behind observed&nbsp;data</p>
 
 <p>CONTACT INFORMATION</p>
 
@@ -34,8 +34,7 @@ Applied Economics Letters, 24(17), 1203-1207, October 2017.</p>
 <p>The poor get poorer: Tracking relative poverty in India using a durables-based mixture model.<br />
 Journal of Development Economics, 119, 110-120, 2016.</p>
 
-<p><br />
-Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership.<br />
+<p>Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership.<br />
 Working Paper, May 2011.</p>
 
 <p>Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited.<br />
