--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
 <!doctype html>
 <html>
 <head>
-	<title>HTML Editor - Full Version</title>
+	<title>Sudeshna Maitra</title>
 </head>
 <body>
-<h1>Sudeshna Maitra</h1>
+<h1 style="margin-left: 40px;">Sudeshna Maitra</h1>
 
-<p>PhD, Princeton University</p>
+<p style="margin-left: 40px;"><em>
+PhD, Princeton University<br />
+MS, Indian Statistical Institute<br />
+BS, Calcutta University
+</em></p>
 
-<p>Assistant Professor<br />
-Department of Economics<br />
-York University<br />
-4700 Keele St, Toronto ON M3J 1P3, Canada</p>
+<p style="margin-left: 40px;">
+Assistant Professor<br />
+Department of Economics,&nbsp;York University<br />
+4700 Keele St, Toronto ON M3J 1P3, Canada
+</p>
 
-<p>RESEARCH INTERESTS<br />
-development, health, gender,&nbsp;&nbsp;<br />
-the economic processes at work behind observed&nbsp;data</p>
+<p style="margin-left: 40px;">Email: <em>lastname at yorku dot ca</em></p>
 
-<p>CONTACT INFORMATION</p>
+<h2 style="margin-left: 40px;">Research Interests</h2>
 
-<p><br />
-RESEARCH</p>
+<p style="margin-left: 40px;">development, health, gender<br />
+the economic processes at work behind observed data</p>
 
-<p>On the Theory and Measurement of Poverty using Durable Ownership Data.<br />
-Working Paper, September 2019.</p>
+<h2 style="margin-left: 40px;"><br />
+Publications and Working Papers</h2>
 
-<p>Population dynamics and marriage payments: an analysis of the long run equilibrium in India.<br />
-The B.E. Journal of Macroeconomics, 18(2), June 2018.</p>
-
-<p>Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model.<br />
-Applied Economics Letters, 24(17), 1203-1207, October 2017.</p>
-
-<p>The poor get poorer: Tracking relative poverty in India using a durables-based mixture model.<br />
-Journal of Development Economics, 119, 110-120, 2016.</p>
-
-<p>Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership.<br />
-Working Paper, May 2011.</p>
-
-<p>Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited.<br />
-Social Science and Medicine, 70(6), 802-812, March 2010.</p>
-
-<p>Does Parental Education Protect Child Health? Some Evidence from Rural Udaipur.<br />
-in Econophysics and Economics of Games, Social Choices and Quantitative Techniques, edited by Banasri Basu, Bikas K. Chakrabarti, Satya R. Chakravarty and Kausik Gangopadhyay, Springer, 2009.</p>
-
-<p>Is Socioeconomic Status Protective of Health? Some Evidence from Rural Udaipur.<br />
-in Poverty, Health and Development, edited by Sujit K. Paul, Commonwealth Publishers, New Delhi, 2008.</p>
-
-<p>Dowry and Bride Price.<br />
-in International Encyclopedia of the Social Sciences, 2nd Edition, Gale Thompson, 2007.</p>
-
-<p>Population growth and marriage payments: the short run mechanism of a marriage squeeze.<br />
-Working paper, 2006.</p>
+<ul>
+	<li>On the Theory and Measurement of Poverty using Durable Ownership Data. <br />
+		Working Paper, September 2019.</li>
+	<li>Population dynamics and marriage payments: an analysis of the long run equilibrium in India. <br />
+		<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.</li>
+	<li>Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model. <br />
+		<em>Applied Economics Letters</em>, 24(17), 1203-1207, October 2017.</li>
+	<li>The poor get poorer: Tracking relative poverty in India using a durables-based mixture model. <br />
+		<em>Journal of Development Economics</em>, 119, 110-120, 2016.</li>
+	<li>Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership. <br />
+		Working Paper, May 2011.</li>
+	<li>Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited. <br />
+		<em>Social Science and Medicine</em>, 70(6), 802-812, March 2010.</li>
+	<li>Does Parental Education Protect Child Health? Some Evidence from Rural Udaipur. <br />
+		in <em>Econophysics and Economics of Games, Social Choices and Quantitative Techniques</em>, edited by Banasri Basu, Bikas K. Chakrabarti, Satya R. Chakravarty and Kausik Gangopadhyay, Springer, 2009.</li>
+	<li>Is Socioeconomic Status Protective of Health? Some Evidence from Rural Udaipur. <br />
+		in <em>Poverty, Health and Development</em>, edited by Sujit K. Paul, Commonwealth Publishers, New Delhi, 2008.</li>
+	<li>Dowry and Bride Price. <br />
+		in <em>International Encyclopedia of the Social Sciences</em>, 2nd Edition, Gale Thompson, 2007.</li>
+	<li>Population growth and marriage payments: the short run mechanism of a marriage squeeze. <br />
+		Working paper, 2006.</li>
+</ul>
 </body>
 </html>
