--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>HTML Editor - Full Version</title>
 	<style>
-	p {color:blue;}
+	p {margin-left: 80px;}
 	</style>
 </head>
 <body>
@@ -17,7 +17,7 @@ BS, Calcutta University</em></p>
 Department of Economics,&nbsp;York University<br />
 4700 Keele St, Toronto ON M3J 1P3, Canada</p>
 
-<p style="margin-left: 40px;">Email: <em>lastname at yorku dot ca</em></p>
+<p>Email: <em>lastname at yorku dot ca</em></p>
 
 <p style="margin-left: 40px;">&nbsp;</p>
 
@@ -26,7 +26,7 @@ Department of Economics,&nbsp;York University<br />
 <p style="margin-left: 40px;">development, health, gender,&nbsp;&nbsp;<br />
 the economic processes at work behind observed&nbsp;data</p>
 
-<h2 style="margin-left: 40px;"><br />
+<h2><br />
 Publications and Working Papers</h2>
 
 <p style="margin-left: 40px;">On the Theory and Measurement of Poverty using Durable Ownership Data.<br />
