--- a/index.html
+++ b/index.html
@@ -1,62 +1,63 @@
 <!doctype html>
 <html>
 <head>
-	<title>HTML Editor - Full Version</title>
+	<title>Sudeshna Maitra</title>	
 	<style>
-	p {margin-left: 80px;}
+	h1 {margin-left: 40px;}
+	h2 {margin-left: 40px;}
+	p {margin-left: 40px;}
 	</style>
-</head>
-<body>
-<h1 style="margin-left: 40px;">Sudeshna Maitra</h1>
 
-<p style="margin-left: 40px;"><em>PhD, Princeton University<br />
+</head>
+	
+<body>
+<h1>Sudeshna Maitra</h1>
+
+<p><em>PhD, Princeton University<br />
 MS, Indian Statistical Institute<br />
 BS, Calcutta University</em></p>
 
-<p style="margin-left: 40px;">Assistant Professor<br />
-Department of Economics,&nbsp;York University<br />
+<p>Assistant Professor<br />
+Department of Economics, York University<br />
 4700 Keele St, Toronto ON M3J 1P3, Canada</p>
 
 <p>Email: <em>lastname at yorku dot ca</em></p>
 
-<p style="margin-left: 40px;">&nbsp;</p>
+<h2>Research Interests</h2>
 
-<h2 style="margin-left: 40px;">Research Interests</h2>
+<p>development, health, gender<br />
+the economic processes at work behind observed data</p>
 
-<p style="margin-left: 40px;">development, health, gender,&nbsp;&nbsp;<br />
-the economic processes at work behind observed&nbsp;data</p>
+<h2>Publications and Working Papers</h2>
 
-<h2><br />
-Publications and Working Papers</h2>
-
-<p style="margin-left: 40px;">On the Theory and Measurement of Poverty using Durable Ownership Data.<br />
+<p>On the Theory and Measurement of Poverty using Durable Ownership Data. <br />
 	Working Paper, September 2019.</p>
 
-<p style="margin-left: 40px;">Population dynamics and marriage payments: an analysis of the long run equilibrium in India. <br />
+<p>Population dynamics and marriage payments: an analysis of the long run equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.</p>
 
-<p style="margin-left: 40px;">Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model. <br />
+<p>Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model. <br />
 	<em>Applied Economics Letters</em>, 24(17), 1203-1207, October 2017.</p>
 
-<p style="margin-left: 40px;">The poor get poorer: Tracking relative poverty in India using a durables-based mixture model. <br />
+<p>The poor get poorer: Tracking relative poverty in India using a durables-based mixture model. <br />
 	<em>Journal of Development Economics</em>, 119, 110-120, 2016.</p>
 
-<p style="margin-left: 40px;">Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership. <br />
+<p>Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership. <br />
 	Working Paper, May 2011.</p>
 
-<p style="margin-left: 40px;">Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited. <br />
+<p>Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited. <br />
 	<em>Social Science and Medicine</em>, 70(6), 802-812, March 2010.</p>
 
-<p style="margin-left: 40px;">Does Parental Education Protect Child Health? Some Evidence from Rural Udaipur. <br />
-	in <em>Econophysics and Economics of Games, Social Choices and Quantitative Techniques</em>, edited by Banasri Basu, Bikas K. Chakrabarti, Satya R. Chakravarty and Kausik Gangopadhyay, Springer, 2009.</p>
+<p>Does Parental Education Protect Child Health? Some Evidence from Rural Udaipur. <br />
+	Book Chapter in <em>Econophysics and Economics of Games, Social Choices and Quantitative Techniques</em>, edited by Banasri Basu, Bikas K. Chakrabarti, Satya R. Chakravarty and Kausik Gangopadhyay, Springer, 2009.</p>
 
-<p style="margin-left: 40px;">Is Socioeconomic Status Protective of Health? Some Evidence from Rural Udaipur. <br />
-	in <em>Poverty, Health and Development</em>, edited by Sujit K. Paul, Commonwealth Publishers, New Delhi, 2008.</p>
+<p>Is Socioeconomic Status Protective of Health? Some Evidence from Rural Udaipur. <br />
+	Book Chapter in <em>Poverty, Health and Development</em>, edited by Sujit K. Paul, Commonwealth Publishers, New Delhi, 2008.</p>
 
-<p style="margin-left: 40px;">Dowry and Bride Price. <br />
-	in <em>International Encyclopedia of the Social Sciences</em>, 2nd Edition, Gale Thompson, 2007.</p>
+<p>Dowry and Bride Price. <br />
+	Book Chapter in <em>International Encyclopedia of the Social Sciences</em>, 2nd Edition, Gale Thompson, 2007.</p>
 
-<p style="margin-left: 40px;">Population growth and marriage payments: the short run mechanism of a marriage squeeze. <br />
+<p>Population growth and marriage payments: the short run mechanism of a marriage squeeze. <br />
 	Working paper, 2006.</p>
 </body>
 </html>
