--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 	
 <body>
+	
+<img src="SM.jpg" alt="Sudeshna Maitra">
+
 <h1>Sudeshna Maitra</h1>
 
 <p><em>PhD, Princeton University<br />
