--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Sudeshna Maitra</title>	
 	<style>
+	img {margin-left: 40px;} 
 	h1 {margin-left: 40px;}
 	h2 {margin-left: 40px;}
 	p {margin-left: 40px;}
