--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Sudeshna Maitra</title>	
 	<style>
-	img {margin: 40px 40px 40px 40px;} 
 	h1 {margin-left: 40px;}
 	h2 {margin-left: 40px;}
 	p {margin-left: 40px;}
@@ -13,7 +12,7 @@
 	
 <body>
 	
-<img src="SM.jpg" alt="Sudeshna Maitra">
+<img style="margin-top: 40px; margin-left: 40px;" src="SM.jpg" alt="Sudeshna Maitra">
 
 <h1>Sudeshna Maitra</h1>
 
