--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 <h1>Sudeshna Maitra</h1>
 
 <p><em>PhD, Princeton University<br />
-MS, Indian Statistical Institute<br />
-BS, Calcutta University</em></p>
+MSQE, Indian Statistical Institute<br />
+BSc, Calcutta University</em></p>
 
 <p>Assistant Professor<br />
 Department of Economics, York University<br />
 4700 Keele St, Toronto ON M3J 1P3, Canada</p>
 
-<p>Email: <em>lastname at yorku dot ca</em></p>
+<p>Email: <em>lastname at yorku dot ca</em><br />
+<a href="https://profiles.laps.yorku.ca/profiles/maitra/">Department Website</a></p>
 
 <h2>Research Interests</h2>
 
