--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ BSc, Calcutta University</em></p>
 
 <p>Assistant Professor<br />
 Department of Economics, York University<br />
-4700 Keele St, Toronto ON M3J 1P3, Canada</p>
+4700 Keele St, Toronto ON M3J 1P3, Canada<br />
+<a href="https://profiles.laps.yorku.ca/profiles/maitra/">Department Website and Contact Information</a></p>
 
-<p>Email: <em>lastname at yorku dot ca</em><br />
-<a href="https://profiles.laps.yorku.ca/profiles/maitra/">Department Website</a></p>
+<p>Email: <em>lastname at yorku dot ca</em></p>
 
 <h2>Research Interests</h2>
 
