--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ the economic processes at work behind observed data</p>
 <p>On the Theory and Measurement of Poverty using Durable Ownership Data. <br />
 	Working Paper, September 2019.</p>
 
-<p>Population dynamics and marriage payments: an analysis of the long run equilibrium in India. <br />
+<p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.</p>
 
-<p>Class matters: tracking urban inequality in post-liberalization India using a durables-based mixture model. <br />
+<p>Class Matters: Tracking Urban Inequality in Post-Liberalization India using a Durables-based Mixture Model. <br />
 	<em>Applied Economics Letters</em>, 24(17), 1203-1207, October 2017.</p>
 
-<p>The poor get poorer: Tracking relative poverty in India using a durables-based mixture model. <br />
+<p>The Poor Get Poorer: Tracking Relative Poverty in India using a Durables-based Mixture Model. <br />
 	<em>Journal of Development Economics</em>, 119, 110-120, 2016.</p>
 
 <p>Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership. <br />
@@ -61,7 +61,7 @@ the economic processes at work behind observed data</p>
 <p>Dowry and Bride Price. <br />
 	Book Chapter in <em>International Encyclopedia of the Social Sciences</em>, 2nd Edition, Gale Thompson, 2007.</p>
 
-<p>Population growth and marriage payments: the short run mechanism of a marriage squeeze. <br />
+<p>Population Growth and Marriage Payments: the Short Run Mechanism of a Marriage Squeeze. <br />
 	Working paper, 2006.</p>
 </body>
 </html>
