--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <h1>Sudeshna Maitra</h1>
 
 <p><em>PhD, Princeton University<br />
-MSQE, Indian Statistical Institute<br />
-BSc, Calcutta University</em></p>
+MSQE, Indian Statistical Institute, Kolkata<br />
+BSc, University of Calcutta</em></p>
 
 <p>Assistant Professor<br />
 Department of Economics, York University<br />
