--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ the economic processes at work behind observed data</p>
 <h2>Publications and Working Papers</h2>
 
 <p>On the Theory and Measurement of Poverty using Durable Ownership Data. <br />
-	Working Paper, September 2019.</p>
+	Working Paper, September 2019.<br />
+	<a href="https://www.sudeshnamaitra.com/Maitra-poverty-theory-measurement.pdf">PDF</a></p></p>
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.</p>
