--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ Department of Economics, York University<br />
 
 <h2>Research Interests</h2>
 
-<p>development, health, gender<br />
-the economic processes at work behind observed data</p>
+<p>Development economics, Health economics, gender<br />
+My research often explores the economic processes at work behind observed data</p>
 
 <h2>Publications and Working Papers</h2>
 
