--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ BSc, University of Calcutta</em></p>
 <p>Assistant Professor<br />
 Department of Economics, York University<br />
 4700 Keele St, Toronto ON M3J 1P3, Canada<br />
-<a href="https://profiles.laps.yorku.ca/profiles/maitra/">Department Website</a></p>
+<a href="https://profiles.laps.yorku.ca/profiles/maitra/">Departmental Profile</a></p>
 
 <p>Email: <em>lastname at yorku dot ca</em></p>
 
