--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ the economic processes at work behind observed data</p>
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.</p>
+	[<a href="https://www.sudeshnamaitra.com/Maitra-lrdowry-Feb2018.pdf">PDF</a>]    
 
 <p>Class Matters: Tracking Urban Inequality in Post-Liberalization India using a Durables-based Mixture Model. <br />
 	<em>Applied Economics Letters</em>, 24(17), 1203-1207, October 2017.</p>
