--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@ the economic processes at work behind observed data</p>
 	[<a href="https://www.sudeshnamaitra.com/Maitra-poverty-theory-measurement-tech-appendix-Sep2019.pdf">Technical Appendices</a>]</p>
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
-	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.</p>
-	[<a href="https://www.sudeshnamaitra.com/Maitra-lrdowry-Feb2018.pdf">PDF</a>]    
+	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra-lrdowry-Feb2018.pdf">PDF</a>]</p>    
 
 <p>Class Matters: Tracking Urban Inequality in Post-Liberalization India using a Durables-based Mixture Model. <br />
-	<em>Applied Economics Letters</em>, 24(17), 1203-1207, October 2017.</p>
-	[<a href="https://www.sudeshnamaitra.com/Maitra-mixture-ineq-Nov2016.pdf">PDF</a>] 
+	<em>Applied Economics Letters</em>, 24(17), 1203-1207, October 2017.<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra-mixture-ineq-Nov2016.pdf">PDF</a>]</p> 
 
 <p>The Poor Get Poorer: Tracking Relative Poverty in India using a Durables-based Mixture Model. <br />
-	<em>Journal of Development Economics</em>, 119, 110-120, 2016.</p>
-	[<a href="https://www.sudeshnamaitra.com/Maitra-rel-poverty-mixture-Jun2015.pdf">PDF</a>] 
+	<em>Journal of Development Economics</em>, 119, 110-120, 2016.<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra-rel-poverty-mixture-Jun2015.pdf">PDF</a>]</p> 
 
 <p>Who are the Indian Middle Class? A Mixture Model of Class Membership Based on Durables Ownership. <br />
-	Working Paper, May 2011.</p>
-	[<a href="https://www.sudeshnamaitra.com/Maitra-middle-class-mixture-May2011.pdf">PDF</a>] 
+	Working Paper, May 2011.<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra-middle-class-mixture-May2011.pdf">PDF</a>]</p> 
 
 <p>Does Patient Self-Management Explain the Health Gradient? Goldman and Smith (2002) Revisited. <br />
 	<em>Social Science and Medicine</em>, 70(6), 802-812, March 2010.</p>
