--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ the economic processes at work behind observed data</p>
 	[<a href="https://www.sudeshnamaitra.com/Maitra-poverty-theory-measurement-tech-appendix-Sep2019.pdf">Technical Appendices</a>]</p>
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
-	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.<br />
+	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.
 	[<a href="https://www.sudeshnamaitra.com/Maitra-lrdowry-Feb2018.pdf">PDF</a>]</p>    
 
 <p>Class Matters: Tracking Urban Inequality in Post-Liberalization India using a Durables-based Mixture Model. <br />
