--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ the economic processes at work behind observed data</p>
 	Working Paper, September 2019.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra-poverty-theory-measurement-Sep2019.pdf">PDF</a>]    
 	[<a href="https://www.sudeshnamaitra.com/Maitra-poverty-theory-measurement-tech-appendix-Sep2019.pdf">Technical Appendices</a>]
-	[Literature Appendix (Coming)]</p>
+	[Literature Appendix]</p>
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.<br />
