fix typo in paper title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ the economic processes at work behind observed data</p>
 
 <h2>Publications and Working Papers</h2>
 
-<p>On the Theory and Measurement of Poverty using Durable Ownership Data. <br />
+<p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
 	Working Paper, September 2019.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Aug2021.pdf">PDF</a>]    
 	[<a href="https://www.sudeshnamaitra.com/Maitra-poverty-theory-measurement-tech-appendix-Sep2019.pdf">Technical Appendices</a>]
