Update with book chapter and CART paper.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@ the economic processes at work behind observed data</p>
 
 <h2>Publications and Working Papers</h2>
 
+<p>To Draw a Relative-Poverty Line: An Approach using Mixture Models and CART. <br />
+	Working Paper, August 2022.<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra_rel_pov_line_CART_Aug2022.pdf">PDF</a>]</p>
+	
+<p>Mixture Models: Identifying consumption classes in post-liberalization India. <br />
+	Working Paper, Jan 2022. (Invited book chapter in "Selected Topics in Cross Section and Panel Data Econometrics", Springer.)<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra_mixture_models_chapter_Jan2022.pdf">PDF</a>]</p>	
+
 <p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
 	Working Paper, September 2021.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2021.pdf">PDF</a>]    
