--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@ the economic processes at work behind observed data</p>
 	Working Paper, September 2023.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2023.pdf">PDF</a>]    
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_tech_appendices.pdf">Technical Appendices</a>]
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Technical_Appendix_5.pdf">Technical Appendix 5</a>]
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_lit_appendix.pdf">Literature Appendix</a>]</p>
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_tech_appendices.pdf">Technical Appendices</a>]
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2021.pdf">Working Paper, Sep 2021</a>]
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.<br />
