--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ the economic processes at work behind observed data</p>
 	[<a href="https://www.sudeshnamaitra.com/Maitra_rel_pov_line_CART_Aug2022.pdf">PDF</a>]</p>
 	
 <p>Mixture Models: Identifying consumption classes in post-liberalization India. <br />
-	In "Selected Topics in Cross Section and Panel Data Econometrics", D. Mukherjee (ed). Springer. January 2024.br />
+	In "Selected Topics in Cross Section and Panel Data Econometrics", D. Mukherjee (ed). Springer. January 2024.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_mixture_models_chapter_Jan2022.pdf">PDF</a>]</p>	
 
 <p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
