--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ the economic processes at work behind observed data</p>
 <h2>Publications and Working Papers</h2>
 
 <p>To Draw a Relative-Poverty Line: An Approach using Mixture Models and CART. <br />
-	Working Paper, August 2022.<br />
-	[<a href="https://www.sudeshnamaitra.com/Maitra_rel_pov_line_CART_Aug2022.pdf">PDF</a>]</p>
+	Working Paper, April 2024.<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra_CART_Apr2024.pdf">PDF</a>]</p>
 	
 <p>Mixture Models: Identifying consumption classes in post-liberalization India. <br />
 	In "Selected Topics in Cross Section and Panel Data Econometrics", D. Mukherjee (ed). Springer. January 2024.<br />
