--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@ the economic processes at work behind observed data</p>
 
 <h2>Publications and Working Papers</h2>
 
+<p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
+	<em>Journal of Development Economics</em>, forthcoming (May 2024).<br />
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2023.pdf">PDF</a>]    
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_tech_appendices.pdf">Technical Appendices</a>]
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Technical_Appendix_5.pdf">Technical Appendix 5</a>]
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_lit_appendix.pdf">Literature Appendix</a>]
+	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2021.pdf">Working Paper, Sep 2021</a>]</p>	
+	
 <p>To Draw a Relative-Poverty Line: An Approach using Mixture Models and CART. <br />
 	Working Paper, April 2024.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_CART_Apr2024.pdf">PDF</a>]</p>
@@ -41,14 +49,6 @@ the economic processes at work behind observed data</p>
 <p>Mixture Models: Identifying consumption classes in post-liberalization India. <br />
 	In <em>Selected Topics in Cross Section and Panel Data Econometrics</em>, D. Mukherjee (ed). Springer. January 2024.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_mixture_models_chapter_Jan2022.pdf">PDF</a>]</p>	
-
-<p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
-	Working Paper, September 2023.<br />
-	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2023.pdf">PDF</a>]    
-	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_tech_appendices.pdf">Technical Appendices</a>]
-	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Technical_Appendix_5.pdf">Technical Appendix 5</a>]
-	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_lit_appendix.pdf">Literature Appendix</a>]
-	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2021.pdf">Working Paper, Sep 2021</a>]</p>
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
 	<em>The B.E. Journal of Macroeconomics</em>, 18(2), June 2018.<br />
