--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ the economic processes at work behind observed data</p>
 <h2>Publications and Working Papers</h2>
 
 <p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
-	<em>Journal of Development Economics</em>, forthcoming (May 2024).<br />
+	<em>Journal of Economic Behavior and Organization</em>, forthcoming (May 2024).<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2023.pdf">PDF</a>]    
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_tech_appendices.pdf">Technical Appendices</a>]
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Technical_Appendix_5.pdf">Technical Appendix 5</a>]
