--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ the economic processes at work behind observed data</p>
 <h2>Publications and Working Papers</h2>
 
 <p>On the Theory and Measurement of Relative Poverty using Durable Ownership Data. <br />
-	<em>Journal of Economic Behavior and Organization</em>, forthcoming (May 2024).<br />
+	<em>Journal of Economic Behavior and Organization</em>, 225, 153-169, September 2024.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Sep2023.pdf">PDF</a>]    
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_tech_appendices.pdf">Technical Appendices</a>]
 	[<a href="https://www.sudeshnamaitra.com/Maitra_relative_poverty_Technical_Appendix_5.pdf">Technical Appendix 5</a>]
@@ -47,7 +47,7 @@ the economic processes at work behind observed data</p>
 	[<a href="https://www.sudeshnamaitra.com/Maitra_CART_Apr2024.pdf">PDF</a>]</p>
 	
 <p>Mixture Models: Identifying consumption classes in post-liberalization India. <br />
-	In <em>Selected Topics in Cross Section and Panel Data Econometrics</em>, D. Mukherjee (ed). Springer. January 2024.<br />
+	In <em>Applied Econometric Analysis Using Cross Section and Panel Data</em>, D. Mukherjee (ed). Springer, 135-166. December 2023.<br />
 	[<a href="https://www.sudeshnamaitra.com/Maitra_mixture_models_chapter_Jan2022.pdf">PDF</a>]</p>	
 
 <p>Population Dynamics and Marriage Payments: An Analysis of the Long Run Equilibrium in India. <br />
